--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "expo": "~41.0.1",
     "expo-font": "~9.1.0",
     "expo-status-bar": "~1.0.4",
+    "firebase": "8.2.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-maps": "0.27.1",
     "react-native-paper": "^4.8.1",
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
@@ -30,6 +32,7 @@
     "react-native-svg": "12.1.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
+    "react-native-webview": "11.2.3",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
